removed 2 images from projects and commented out items, renamed title index html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Reciplease</title>
+    <title>SimpleLife Landscaping</title>
     <script src="https://smtpjs.com/v3/smtp.js">
     </script>
   </head>
